[package]
name = "riscv-crates"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]

[workspace]

[dependencies]
nb = "0.1.1"
e310x-hal = { path = "e310x-hal" }
hifive = { path = "hifive" }
#riscv-alloc = { path = "riscv-alloc" }
riscv-semihosting = { path = "riscv-semihosting" }
riscv-rust-quickstart = { path = "riscv-rust-quickstart" }

[dev-dependencies]
riscv = { path = "riscv" }
stlog = "0.2.0"

[profile.release]
debug = true
lto = true

[profile.dev]
debug = true
lto = true
# workaround rust-lang/rust#47074
codegen-units = 1
incremental = false
